# archivebot

./: .envrc.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross  README.md  build-cross.sh
.github/workflows/: docker.yaml
src/: archiver.rs  config.rs  lib.rs  main.rs
src/util/: archive.rs  github.rs  metadata.rs  metrics.rs  mod.rs  rclone.rs  tasq.rs  ytdl.rs
