[package]
name = "archivebot"
version = "0.1.0"
repository = "https://github.com/ragtag-archive/archivebot"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "archivebot"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.4.0"
clap = { version = "3.2.8", features = ["derive"] }
dirs = "4.0.0"
tempfile = "3"
env_logger = "0.8.4"
log = "0.4"
mime_guess = "2"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
derivative = "2.2.0"
validator = { version = "0.16", features = ["derive"] }
actix-web-validator = "5"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "cookies",
  "rustls-tls-webpki-roots",
  "stream",
] }
zip = { version = "0.6", default-features = false, features = [
  "deflate",
  "bzip2",
] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

[dev-dependencies]
mockito = "0.31.0"

[build-dependencies]
built = { version = "0.6.1", features = [
  "git2",
  "chrono",
  "semver",
] }

[profile.release]
lto = true
strip = true
